Bug 364281 - Plasma crash when clicking on "Unknown Settings" of compositor icon in system tray
Summary: Plasma crash when clicking on "Unknown Settings" of compositor icon in system...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR crash
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-06-13 21:37 UTC by Bill Brasky
Modified: 2016-06-15 10:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bill Brasky 2016-06-13 21:37:10 UTC
Application: plasmashell (5.6.90)

Qt Version: 5.6.0
Frameworks Version: 5.24.0
Operating System: Linux 4.4.0-22-generic x86_64
Distribution: KDE neon Developer Edition

-- Information about the crash:
- What I was doing when the application crashed:

A compositor icon appears in the system tray, I hover over it and it says "Unknown", I right click and there's only one option to click "Unknown settings", intrigued I click it and plasma crashes and restarts 5 sec later.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma (plasmashell), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f7e2d3cf8c0 (LWP 1309))]

Thread 14 (Thread 0x7f7e196b6700 (LWP 1312)):
#0  0x00007f7e27c89e8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f7e2bda1c62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f7e2bda38d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f7e1c03a1e9 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f7e2746c6fa in start_thread (arg=0x7f7e196b6700) at pthread_create.c:333
#6  0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 13 (Thread 0x7f7e1391e700 (LWP 1313)):
#0  0x00007f7e27c859cd in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f7e24a286c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7e249e4e04 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7e249e52c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f7e249e542c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f7e285af4ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f7e2855815a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f7e28381f94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f7e2d508375 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#9  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f7e2746c6fa in start_thread (arg=0x7f7e1391e700) at pthread_create.c:333
#11 0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 12 (Thread 0x7f7e120e1700 (LWP 1320)):
#0  0x00007f7e24a29a64 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f7e249e48a0 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7e249e524b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7e249e542c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f7e285af4ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f7e2855815a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f7e28381f94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f7e2ac5cdc5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007f7e2746c6fa in start_thread (arg=0x7f7e120e1700) at pthread_create.c:333
#10 0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 11 (Thread 0x7f7e0bfff700 (LWP 1340)):
#0  0x00007f7e24a29a64 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f7e249e4b89 in g_main_context_query () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7e249e5297 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7e249e542c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f7e285af4ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f7e2855815a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f7e28381f94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f7e2ac5cdc5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007f7e2746c6fa in start_thread (arg=0x7f7e0bfff700) at pthread_create.c:333
#10 0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 10 (Thread 0x7f7e0a5a6700 (LWP 1375)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7e2ce1d574 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#2  0x00007f7e2ce1d5b9 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#3  0x00007f7e2746c6fa in start_thread (arg=0x7f7e0a5a6700) at pthread_create.c:333
#4  0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7f7d77fd7700 (LWP 1378)):
#0  0x00007f7e27c859cd in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f7e24a286c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7e249e4e04 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7e249e52c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f7e249e542c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f7e285af4ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f7e2855815a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f7e28381f94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f7e2b5de8b6 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#9  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f7e2746c6fa in start_thread (arg=0x7f7d77fd7700) at pthread_create.c:333
#11 0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7f7d76895700 (LWP 1381)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7e28387c5b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f7e2b64fc4d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#3  0x00007f7e2b650525 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#4  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f7e2746c6fa in start_thread (arg=0x7f7d76895700) at pthread_create.c:333
#6  0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7f7d6effe700 (LWP 1382)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7e28387c5b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f7e2b64fc4d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#3  0x00007f7e2b650525 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#4  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f7e2746c6fa in start_thread (arg=0x7f7d6effe700) at pthread_create.c:333
#6  0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7f7d5c476700 (LWP 1395)):
#0  0x00007f7e2837f309 in QMutex::unlock() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#1  0x00007f7e285aeb41 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f7e249e48ad in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7e249e524b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f7e249e542c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f7e285af4ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f7e2855815a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f7e28381f94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f7e2ac5cdc5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#9  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f7e2746c6fa in start_thread (arg=0x7f7d5c476700) at pthread_create.c:333
#11 0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f7d589af700 (LWP 1396)):
#0  0x00007f7e27c859cd in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f7e24a286c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7e249e4e04 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7e249e52c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f7e249e542c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f7e285af4ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f7e2855815a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f7e28381f94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f7d5ae8f597 in KCupsConnection::run() () from /usr/lib/x86_64-linux-gnu/libkcupslib.so
#9  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f7e2746c6fa in start_thread (arg=0x7f7d589af700) at pthread_create.c:333
#11 0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f7d539ee700 (LWP 1403)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7e28387c5b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f7e2b64fc4d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#3  0x00007f7e2b650525 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#4  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f7e2746c6fa in start_thread (arg=0x7f7d539ee700) at pthread_create.c:333
#6  0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f7d43ffe700 (LWP 1634)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f7e28387c5b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f7e2b64fc4d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#3  0x00007f7e2b650525 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#4  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f7e2746c6fa in start_thread (arg=0x7f7d43ffe700) at pthread_create.c:333
#6  0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f7d50a4c700 (LWP 1635)):
#0  0x00007f7e24a29a64 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f7e249e52d6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7e249e542c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7e285af4ab in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f7e2855815a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f7e28381f94 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f7e2ac5cdc5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007f7e28386da8 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f7e2746c6fa in start_thread (arg=0x7f7d50a4c700) at pthread_create.c:333
#9  0x00007f7e27c95b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f7e2d3cf8c0 (LWP 1309)):
[KCrash Handler]
#6  0x00007f7e27bc4418 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
#7  0x00007f7e27bc601a in __GI_abort () at abort.c:89
#8  0x00007f7e2836f011 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007f7e2a2bbcf7 in KPluginInfo::property (this=this@entry=0x7ffe53760020, key=...) at /var/lib/jenkins-slave/nci/workspace/xenial_unstable_frameworks_kservice_bin_amd64/build/src/services/kplugininfo.cpp:617
#10 0x00007f7e2cf5c1aa in PlasmaQuick::ConfigViewPrivate::init (this=0x2fc4fc0) at /var/lib/jenkins-slave/nci/workspace/xenial_unstable_frameworks_plasma-framework_bin_amd64/build/src/plasmaquick/configview.cpp:93
#11 0x00007f7e2cf5d698 in PlasmaQuick::ConfigView::ConfigView (this=0x2d07860, applet=0x2880e40, parent=<optimized out>) at /var/lib/jenkins-slave/nci/workspace/xenial_unstable_frameworks_plasma-framework_bin_amd64/build/src/plasmaquick/configview.cpp:265
#12 0x000000000042db10 in ?? ()
#13 0x00007f7e28586d3e in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007f7e2bb0d4e2 in Plasma::Containment::configureRequested (this=<optimized out>, _t1=0x2880e40) at /var/lib/jenkins-slave/nci/workspace/xenial_unstable_frameworks_plasma-framework_bin_amd64/build/obj-x86_64-linux-gnu/src/plasma/moc_containment.cpp:454
#15 0x00007f7e28586d3e in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007f7e2bb0d4e2 in Plasma::Containment::configureRequested (this=<optimized out>, _t1=0x2880e40) at /var/lib/jenkins-slave/nci/workspace/xenial_unstable_frameworks_plasma-framework_bin_amd64/build/obj-x86_64-linux-gnu/src/plasma/moc_containment.cpp:454
#17 0x00007f7e2bb1a0ba in Plasma::AppletPrivate::requestConfiguration (this=<optimized out>) at /var/lib/jenkins-slave/nci/workspace/xenial_unstable_frameworks_plasma-framework_bin_amd64/build/src/plasma/private/applet_p.cpp:390
#18 0x00007f7e2bb0aed9 in Plasma::Applet::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /var/lib/jenkins-slave/nci/workspace/xenial_unstable_frameworks_plasma-framework_bin_amd64/build/obj-x86_64-linux-gnu/src/plasma/moc_applet.cpp:243
#19 0x00007f7e28586a00 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#20 0x00007f7e28e83ef2 in QAction::triggered(bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#21 0x00007f7e28e86a10 in QAction::activate(QAction::ActionEvent) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007f7e290083d2 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#23 0x00007f7e2900e546 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#24 0x00007f7e29012769 in QMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007f7e28ed15d8 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007f7e2901320b in QMenu::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#27 0x00007f7e28e8d1dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#28 0x00007f7e28e92bc1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#29 0x00007f7e2855a3d8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#30 0x00007f7e28e91995 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#31 0x00007f7e28eeb747 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#32 0x00007f7e28eed92b in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#33 0x00007f7e28e8d1dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#34 0x00007f7e28e92446 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#35 0x00007f7e2855a3d8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#36 0x00007f7e288a94c0 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#37 0x00007f7e288ab055 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#38 0x00007f7e2888830b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#39 0x00007f7e1c06e780 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#40 0x00007f7e249e5127 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007f7e249e5380 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007f7e249e542c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#43 0x00007f7e285af48f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#44 0x00007f7e2855815a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#45 0x00007f7e2856081c in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#46 0x000000000041c4d5 in ?? ()
#47 0x00007f7e27baf830 in __libc_start_main (main=0x41b960, argc=2, argv=0x7ffe53761678, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe53761668) at ../csu/libc-start.c:291
#48 0x000000000041c859 in _start ()

Possible duplicates by query: bug 363397, bug 362635, bug 362475, bug 362228, bug 362123.

Reported using DrKonqi
Comment 1 Marco Martin 2016-06-15 10:46:11 UTC
Git commit 746f57713cef7292573977c6a34973603a2f3c13 by Marco Martin.
Committed on 15/06/2016 at 10:44.
Pushed by mart into branch 'master'.

guard against invalid applets

an applet can be present but being one that failed to load
therefore with an invalid kplugininfo, which can cause asserts around

M  +4    -0    src/plasmaquick/configview.cpp

http://commits.kde.org/plasma-framework/746f57713cef7292573977c6a34973603a2f3c13